k8s-manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  namespace: dev
spec:
  type: NodePort
  selector:
    app: nginx-test
  ports:
  - port: 80
    targetPort: 80
